--- a/main.html
+++ b/main.html
@@ -14,10 +14,10 @@
 				<a href="www.google.com">Home</a>
 			</li>
 			<li>
-				<a href="www.google.com">About us</a>
+				<a href="www.youtube.com">About us</a>
 			</li>
 			<li>
-				<a href="www.google.com">Contact us</a>
+				<a href="www.facebook.com">Contact us</a>
 			</li>
 		</ul>
 	</nav>
@@ -26,8 +26,7 @@
 
 	<img src="https://picsum.photos/id/123/200/300" alt="Random image"/>
 	<img src="https://picsum.photos/id/124/200/300" alt="Random image"/>
-	<img src="https://picsum.photos/id/125/200/300
-" alt="Random image"/>
+	<img src="https://picsum.photos/id/125/200/300" alt="Random image"/>
 
 	
 
